# ball-e

./: .clang-format  .gitignore  CMakeLists.txt  README.md
CAD/: Robot Parts - Case Plug 1.stl  Robot Parts - Case Plug 2.stl  Robot Parts - Case Plug 3.stl  Robot Parts - Frame.stl  Robot Parts - IMU Adapter.stl  Robot Parts - Wheel Bottom.stl  Robot Parts - Wheel Top.stl  Robot.step
CAD/model/: Robot.step
CAD/stl/: Robot Parts - Wheel Bottom.stl  Robot Parts - Wheel Top.stl
include/: interrupt_handler.h  matrix.h  matrix.hpp  motor.h  motor_decoder.h  motor_driver.h  omniwheel.h  pid.h  pwm_slice.h  robot.h  velocity_measurement.h
include/motor_driver/: dri0044.h  l298n.h  motor_driver.h
include/motor_drivers/: dri0044.h  l298n.h
lib/: CMakeLists.txt
lib/btcontrol/: CMakeLists.txt  bluepad32_import.cmake
lib/btcontrol/config/: btstack_config.h  sdkconfig.h
lib/btcontrol/include/: btcontrol.h
lib/btcontrol/src/: btcontrol.cpp
lib/debugging/: CMakeLists.txt
lib/debugging/include/: parameters.h  plot.h
lib/debugging/src/: parameters.cpp
lib/filter/: CMakeLists.txt
lib/filter/include/: lowpass.h
lib/filter/src/: lowpass.cpp
lib/imu/: CMakeLists.txt
lib/imu/include/: i2c_device.h  imu_calibration.h  lis3.h  lsm6.h  orientation_estimator.h
lib/imu/src/: i2c_device.cpp  lis3.cpp  lsm6.cpp  orientation_estimator.cpp
lib/maths/: CMakeLists.txt
lib/maths/include/: matrix.h  matrix.hpp
lib/motor_hardware/: CMakeLists.txt
lib/motor_hardware/include/: motor_decoder.h  motor_state.h
lib/motor_hardware/include/motor_drivers/: dri0044.h  l298n.h
lib/motor_hardware/src/: motor_decoder.cpp  motor_state.cpp  velocity_measurement.cpp
lib/motor_hardware/src/motor_drivers/: dri0044.cpp  l298n.cpp
lib/pico_utility/: CMakeLists.txt
lib/pico_utility/src/: interrupt_handler.cpp
lib/pid/: CMakeLists.txt
lib/pid/include/: lowpass.h  pid.h
lib/pid/src/: lowpass.cpp  pid.cpp
pcb/: motor_test.fzz
scripts/: LowPassFilter.ipynb  imu_calibration.py  serial_io.py
src/: CMakeLists.txt  imu_calibration_values.h  interrupt_handler.cpp  main.cpp  motor.cpp  motor_decoder.cpp  motor_driver_kickstart.cpp  motor_driver_kickstart.h  motor_driver_pid.cpp  motor_driver_pid.h  omniwheel.cpp  omniwheel.h  pid.cpp  pwm_slice.cpp  robot.cpp  robot.h  robot_control.cpp  robot_control.h  velocity_measurement.cpp
src/blink/: CMakeLists.txt  blink.c
src/motor_driver/: dri0044.cpp  l298n.cpp
src/motor_drivers/: dri0044.cpp  l298n.cpp
src/motor_test/: CMakeLists.txt  motor_test.cpp
src/playground/: CMakeLists.txt  blink.c  debugging_test.cpp  decoder_test.cpp  gamepad_test.cpp  imu_calibration.cpp  imu_test.cpp  kickstart_driver_test.cpp  lp_filter_test.cpp  motor_test.cpp  orientation_test.cpp  pid_driver_test.cpp  velocity_test.cpp
